MDEV-9922: Assertion `!join->only_const_tables() && fsort' failed

When join output is just one row, we still need to compute window
function values for it. We could skip invoking filesort for it,
but it doesn't seem to be worth it to do such optimization.